--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    
+    <a href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookie Recipe</a>
 </body>
 </html>
