Deleted link properties, added return link
Returns user back to home webpage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <a href="./recipes/chocolate-chip-cookies.html" target="_blank" rel="noopener noreferrer">Chocolate Chip Cookie Recipe</a>
+    <a href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookie Recipe</a>
 </body>
 </html>
