--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joy of Cooking Chococolate Chip Cookies</title>
+    <title>Chocolate Chip Cookie Recipe</title>
 </head>
 <body>
-    
+    <h1>Joy of Cooking Chocolate Chip Cookie Recipe</h1>
+    <a href="../index.html">Main Recipe Page</a>
 </body>
 </html>
