Added image to the cookie recipe
Visual aid needed in a recipe

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -6,7 +6,10 @@
     <title>Chocolate Chip Cookie Recipe</title>
 </head>
 <body>
-    <h1>Joy of Cooking Chocolate Chip Cookie Recipe</h1>
     <a href="../index.html">Main Recipe Page</a>
+    <br>
+    <h1>Joy of Cooking Chocolate Chip Cookie Recipe</h1>
+    <br>
+    <img src="../images/cookie.jpg" alt="Chocolate Chip Cookie">
 </body>
 </html>
