--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -11,5 +11,34 @@
     <h1>Joy of Cooking Chocolate Chip Cookie Recipe</h1>
     <br>
     <img src="../images/cookie.jpg" alt="Chocolate Chip Cookie">
+    <br>
+    <h2>Description</h2>
+    <p>This is one of the best chocolate chip cookie recipes I've ever found! Joy of Cooking has created the best richest, tastiest cookie to rule them all! </p>
+    <p>Prep time: 10 min, Bake time: 8 - 10 min</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Half cup unsalted butter, room temp</li>
+        <li>Half cup granulated sugar</li>
+        <li>Half cup brown sugar</li>
+        <li>One egg</li>
+        <li>One cup and two tbsp flour</li>
+        <li>Half tsp baking sodas</li>
+        <li>Fourth tsp alt</li>
+        <li>One and a half tsp vanilla</li>
+        <li>One cup chocolate chips</li>
+        <li>Optional: three-fourths cup walnuts</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 375 degrees F. Prepare baking pan</li>
+        <li>Mix together butter, granulated sugar, and brown sugar</li>
+        <li>Mix in egg</li>
+        <li>Mix in flour, baking soda, salt, and vanilla</li>
+        <li>Mix in chocolate chips</li>
+        <li>Scoop onto the prepared pan (about tbsp in size), leave about 2 inches between each cookie</li>
+        <li>Bake 8-12 minutes or until cookies are golden brown</li>
+        <li>Transfer to rack to cool</li>
+        <li>Enjoy</li>
+    </ol>
 </body>
 </html>
